error ortografia corregido

--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -44,7 +44,7 @@
                     </li>
                     <li><a href="#/reportar">Reportar incidente</a>
                     </li>
-                    <li><a href="#/politicas">Politicas de privacidad</a>
+                    <li><a href="#/politicas">Políticas de privacidad</a>
                     </li>
                 </ul>
                 
