agregar script a pruebas

--- a/Clientes/Web/publico/vistas/vistaInicio.html
+++ b/Clientes/Web/publico/vistas/vistaInicio.html
@@ -39,7 +39,7 @@
                     <strong>WATCH<sub>MX</sub></strong> es una plataforma creada para monitorear la fauna que cruza las carreteras en México con el fin de desarrollar planes de mitigación que puedan ayudar a evitar accidentes de los usuarios que utilicen la red de carreteras del país, así como la pérdida de especies por atropellamiento.
                 </p>
                 <p>
-                    <strong>WATCH<sub>MX</sub></strong> es el acrónimo de <q>Wild Animals in Transport Corridors and Highways</q>, que en español significa <q>Animales Silvestres en Corredores de Transporte y Carreteras</q>. Si deseas conocer más o tienes dudas envíanos un correo a watch@imt.mx
+                    <strong>WATCH<sub>MX</sub></strong> es el acrónimo de <q>Wild Animals in Transport Corridors and Highways</q>, que en español significa <q>Animales Silvestres en Corredores de Transporte y Carreteras</q>. Si deseas conocer más o tienes dudas envíanos un correo a watch@imt.mx.
                 </p>
             </div>
         </div>
@@ -58,7 +58,7 @@
                         <div class="fact-icon"><span class="icon-camera"></span></div>
                         <div class="txt-circle">
                             <h3>Fotografías de incidentes de los usuarios</h3>
-                            <p>Todo comienza gracias a la ayuda de los usuarios, los cuales proporcionan fotografias de los incidentes para su posterior análisis</p>
+                            <p>Todo comienza gracias a la ayuda de los usuarios, los cuales proporcionan fotografías de los incidentes para su posterior análisis.</p>
                         </div>
                     </div>
                     <div class="txt-circle-content first-ic">
