link a la play store

--- a/Clientes/Web/publico/vistas/vistaInicio.html
+++ b/Clientes/Web/publico/vistas/vistaInicio.html
@@ -131,7 +131,7 @@
                     </li>
                      <li>
                         <a class="btn btn-lg btn-app-store" href="#"></a>
-                        <a class="btn btn-lg btn-play-store" href="#"></a>
+                        <a class="btn btn-lg btn-play-store" href="https://play.google.com/store/apps/details?id=com.watchimt.imt.ommfcm" target="_blank"></a>
                      </li>
                 </ul>
             </div>
